// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NumberCircle /> it renders powerball number circle 1`] = `
<div
  className=""
  data-cy="numberCircle__powerball"
>
  <span
    className="Styled__Label-c3m4bn-1"
  >
    19
  </span>
</div>
`;

exports[`<NumberCircle /> it renders primary number circle 1`] = `
<div
  className=""
  data-cy="numberCircle__primary"
>
  <span
    className="Styled__Label-c3m4bn-1"
  >
    31
  </span>
</div>
`;

exports[`<NumberCircle /> it renders secondary number circle with powerball label 1`] = `
<div
  className=""
  data-cy="numberCircle__powerball"
>
  <span
    className="Styled__Label-c3m4bn-1"
  >
    PB
  </span>
</div>
`;
